--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="CamKart is an dummy e-commerce app having almost every product that a guy with a camera needs.This app is made using React framework.It is a dynamic app and uses a backend express app to fetch data from a mongo database. Functionalites of this app are -data sorting/filtering, user login/signup and  managment, cart/wishlist managment.The author of this app is Utsav kumar."
 		/>
 		<!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>CamKart | An e-commerce app</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
