--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,59 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/youtube.svg" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta
-			name="description"
-			content="VizzTube is Video Library app having almost all the videos that a guy with a camera needs to learn.This app is made using React framework.It is a dynamic app and uses a backend express app to fetch data from a mongo database. Functionalites of this app are -data sorting/filtering, user login/signup and  managment, playlist managment.The author of this app is Utsav kumar."
-		/>
-		<!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 		<title>VizzTube | A Video-library app</title>
+
+		<meta name="robots" content="follow, index" />
+		<meta
+			content="VizzTube is Video Library app having almost all the videos that a guy with a camera needs to learn. This app is made using React.It is a dynamic app and uses a backend express app to fetch data from a mongo database."
+			name="description"
+		/>
+		<meta property="og:url" content="https://vizztube.utsavkumar.tech" />
+		<link rel="canonical" href="https://vizztube.utsavkumar.tech" />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="vizztube.utsavkumar.tech" />
+		<meta
+			property="og:description"
+			content="VizzTube is Video Library app having almost all the videos that a guy with a camera needs to learn. This app is made using React.It is a dynamic app and uses a backend express app to fetch data from a mongo database."
+		/>
+		<meta property="og:title" content="VizzTube | A Video-library app" />
+		<meta
+			name="image"
+			property="og:image"
+			content="https://vizztube.utsavkumar.tech/ogMain.png"
+		/>
+
+		<meta
+			name="twitter:card"
+			content="https://vizztube.utsavkumar.tech/ogMain.png"
+		/>
+		<meta name="twitter:site" content="@utsavkumar280" />
+		<meta name="twitter:title" content="VizzTube | A Video-library app" />
+		<meta
+			name="twitter:description"
+			content="VizzTube is Video Library app having almost all the videos that a guy with a camera needs to learn. This app is made using React.It is a dynamic app and uses a backend express app to fetch data from a mongo database."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://vizztube.utsavkumar.tech/ogMain.png"
+		/>
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#603cba" />
+		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
+		<meta name="theme-color" content="#ffffff" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
